--- a/ch3_closures.html
+++ b/ch3_closures.html
@@ -16,4 +16,7 @@
 
   //We now pass the value 2 corresponding to "number"
   console.log(twice(2));
+
+  //A way to see this that "return function(){}" freezes all the local info 
+  //for later use
 </script>
